--- a/android/src/main/res/layout/activity_background_call.xml
+++ b/android/src/main/res/layout/activity_background_call.xml
@@ -29,7 +29,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout25"
-            app:srcCompat="@drawable/splash_icon" />
+            app:srcCompat="@mipmap/ic_launcher" />
 
         <LinearLayout
             android:id="@+id/linearLayout25"
